# REM

./: .gitignore  README.md  justfile  pyproject.toml
src/models/: transformer.py  world_model.py
