[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wassname <git@wassname.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = {version = "^2.1.0+cu121", source = "pytorch"}
matplotlib = "^3.8.0"
loguru = "^0.7.2"
einops = "^0.8.0"
torchinfo = "^1.8.0"
accelerate = "^0.24.1"
peft = "^0.5.0"
bitsandbytes = "^0.41.0"
transformers = "4.34.0"
tqdm = "^4.66.1"
wandb = "^0.12.6"
pygame = "^2.5.2"
psutil = "^5.9.6"
protobuf = "^3.10.0"
opencv-python = "^4.8.1.78"
hydra-core = "^1.3.2"
torchvision = "^0.16.0"
numpy = ">=1.18.0"
scipy = "^1.11.3"
craftax = {path = "/media/wassname/SGIronWolf/projects5/2024/Craftax"}
gymnasium = "^0.29.1"
jax = "^0.4.28"
jaxlib = "^0.4.28"

ale-py = "0.7.4"
gym = { version = "0.22.0", extras = ["accept-rom-license"]}
yet-another-retnet = "^0.5.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
ipykernel = "^6.25.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
